Create image routes for uploading images to AWS S3
- Update product's upload image controller to upload image to AWS S3 and link it to the product
- Create S3 configuration with MulterS3 to handle file upload
- Update documentation and integration tests
